# EEEM068-AML-CW

./: .gitignore  prepare_dataset.py  pyproject.toml
src/: config.py  dataset.py  train.py  utils.py
src/models/: __init__.py  timesformer.py  videomae.py  vivit.py
